--- a/estilo.css
+++ b/estilo.css
@@ -15,6 +15,7 @@ body{
 }
 
 
+
 /* seccion Inicio */
 .inicio{
     background:linear-gradient(to right, #000c67, #007be5);
@@ -33,35 +34,43 @@ body{
     padding: 30px 0;
     align-items: center;
 }
-.inicio .logo{
-    display: flex;
-    align-items: center;
-    color: #00deef;
+.menu-responsive{
+    display: none;
+    margin-left: auto;
+    color: #fff;
+    line-height: 60px;
     font-size: 25px;
+    cursor: pointer;
 }
-.inicio .logo i{
-    display: inline-block;
-    margin-right: 20px;
-}
-#inicio header nav a{
+.logo a{
     color: #fff;
     text-decoration: none;
-    display: inline-block;
-    padding: 5px 10px;
+    font-size: 20px;
+    line-height: 60px;
     text-transform: uppercase;
-    border: 2px solid transparent;
+
 }
-#inicio header nav a:hover{
-    border-bottom: 2px solid #ff5b00;
+#menu{
+    margin-left: auto;
 }
-.inicio .redes .a{
-    text-decoration: none;
-    color: #fff;
+#menu ul li{
+    display: inline-block; 
+}
+#menu ul li a{
     display: inline-block;
-    margin: 0 10px;
+    position: relative;
+    color: #fff;
+    text-decoration: none;
+    line-height: 60px;
+    padding: 0 8px;
+    text-transform: uppercase;
+    transition: .2s;
 }
-.inicio .redes .a:hover{
-    color: #ff5b00;
+#menu ul li a:hover{
+    /* Agregar sombras */
+}
+.mostrar{
+    height: auto !important;
 }
 .inicio .fila{
     display: flex;
@@ -97,19 +106,6 @@ body{
 }
 .inicio .fila .col button:hover{
     transform: scale(1.1);
-}
-#icon-nav{
-    height: 30px;
-    width: 30px;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 50%;
-    transition: .3s;
-    cursor: pointer;
-    display: none;
-}
-#icon-nav:hover{
-    background-color: #3e3e3e;
 }
 .sombra{
     filter: drop-shadow(0em 30px 20px #9bd2f4);
@@ -311,25 +307,35 @@ footer{
     .redes{
         display: none;
     }
-    #nav{
-        display: none;
+
+    /* barra de navegacion */
+    .menu-responsive{
+        display: block;
     }
-    #nav-responsive{
-        background-color: rgba(0, 0, 0, .9);
-        top: 0;
-        left: 0;
-        height: 100vh;
+    #menu{
+        background: #000c67;
         position: absolute;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        z-index: 99;
+        top: 90px;
+        left: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        transition: .3s ease-out;
     }
-    #nav-responsive a{
-        font-size: 30px;
+    #menu ul li{
+        display: block;
+        text-align: center;
     }
+    #menu ul li a{
+        color: #fff;
+        font-size: 20px;
+        border-bottom: 1px solid #fff;
+        width: 100%;
+    }
+    #menu ul li a:hover{
+        /* Agregar sombras */
+    }
+
 
     /* seccion inicio */
     .inicio{
